--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -225,7 +225,7 @@ L'installazione ed il funzionamento del server dipendono dalla presenza del web 
 [TODO: chiedere a Bosco]
 
 \subsezione{Descrizione funzionale - Lato client}
-\subsezione{Il Menu}
+\subsubsezione{Il Menu}
 Il programma dispone di un menu a tendina nella parte alta dell'interfaccia grafica.
 
 \begin{figure}[!ht]
@@ -240,7 +240,7 @@ Per salvare un file si deve selezionare \textit{File > Salva} e inserire un nome
 La sezione \textit{Visualizza} permette di visualizzare i dialog delle propriet\`a nel caso fossero stati chiusi tramite il tasto di chiusura in alto a destra (la classica X). \textit{Colori} si riferisce alla finestra che modifica i colori di una figura mentre \textit{Propriet\`a} gestisce la posizione e la dimensione di una figura.
 Infine la sezione \textit{About} permette di visualizzare informazioni sul prodotto e sull'azienda sviluppatrice.
 
-\subsezione{La Toolbar}
+\subsubsezione{La Toolbar}
 Le funzioni di disegno del programma sono accessibili attraverso i bottoni presenti nel lato sinistro dell'interfaccia grafica. Cliccando su un pulsante si attiva la funzione desiderata. Il puntatore del mouse cambia a seconda della funzione di disegno scelta, nei browser che lo supportano.
 
 \begin{figure}[!ht]
@@ -324,6 +324,19 @@ Qui \`e stata selezionata la funzione \textit{Etichetta di testo}. Si deve clicc
 Qui \`e stata selezionata la funzione \textit{Zoom}. \`E possibile impostare manualmente la percentuale di zoom agendo sulla combobox posta in basso a sinistra dell'applicazione con un click sulla combobox apposita e un click sulla percentuale desiderata. A questo punto \`e possibile aumentare o diminuire lo zoom della percentuale desiderata mediante l'tuilizzo dei pulsanti lente (evidenziati in grigio) per aumentare o diminuire il grado di zoom.
  
 
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.4]{images/bezier.png}
+\caption{Disegno di una curva di bezier}
+\end{figure} 
+
+\vspace{100pt}
+Qui \`e stata selezionata la funzione \textit{Curva di Bezier}. Per disegnare la curva, si deve fare click sul piano di disegno dove si desidera disegnare la curva. Il punto selezionato sar\`a il punto iniziale della curva, poi eseguire due click sul piano di disegno per descrivere i due punti controllo per cui passeranno le tangenti alla curva ed infine un ultimo click per selezionare il punto finale della curva.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%% FINE TOOLBAR %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%% BOTTONI E DIALOG %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsezione{bottoni e finestre di dialogo}
+
 \vspace{100pt}
 Facendo click sul pulsante \textit{Svuota} in basso a sinistra, l'utente pu\`o cancellare tutto ci\`o che \`e stato di segnato sul piano di disegno fino a quel punto e ripartire da zero con un nuovo disegno. Si consiglia di salvare prima di cancellare per evitare di perdere il lavoro svolto finora.
 
@@ -341,15 +354,6 @@ Facendo click sul pulsante \textit{Svuota} in basso a sinistra, l'utente pu\`o c
 
 \vspace{100pt}
 Il bottone \textit{Cancella} in basso a sinistra (sotto la toolbar di disegno) permette di cancellare una figura correntemente selezionata cliccando sul pulsante suddetto. La medesima funzione pu\`o essere svolta da tastiera premendo il tasto \textit{Canc}.
-
-\begin{figure}[!ht]
-\centering
-\includegraphics[scale=0.4]{images/bezier.png}
-\caption{Disegno di una curva di bezier}
-\end{figure} 
-
-\vspace{100pt}
-Qui \`e stata selezionata la funzione \textit{Curva di Bezier}. Per disegnare la curva, si deve fare click sul piano di disegno dove si desidera disegnare la curva. Il punto selezionato sar\`a il punto iniziale della curva, poi eseguire due click sul piano di disegno per descrivere i due punti controllo per cui passeranno le tangenti alla curva ed infine un ultimo click per selezionare il punto finale della curva.
 
 \begin{figure}[!ht]
 \centering
@@ -390,20 +394,36 @@ Questa funzionalit\`a prevede la possibilit\`a per l'utente di cambiare il color
 \vspace{100pt}
 Qui \`e stata selezionata la funzione di cambiamento del colore di riempimento della figura selezionata con l'ausilio del dialog \textit{Modifica Colori} posto in alto a destra. Il funzionamento \`e completamente analogo a quanto descritto per modificare il colore del bordo. Non tutte le figure hanno un colore di riempimento.
 
-%\begin{figure}[!ht]
-%\centering
-%\includegraphics[scale=0.4]{images/cambio_#lati_prima.png}
-%\caption{cambio numero lati di un poligono  - PRIMA}
-%\end{figure} 
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.4]{images/numero_lati_prima.png}
+\caption{cambio numero lati di un poligono  - PRIMA}
+\end{figure} 
 
 %\begin{figure}[!ht]
 %\centering
-%\includegraphics[scale=0.4]{images/cambio_#lati_dopo.png}
+%\includegraphics[scale=0.4]{images/numero_lati_dopo.png}
 %\caption{cambio numero lati di un poligono  - DOPO}
 %\end{figure} 
 
 \vspace{100pt}
-Qui \`e stata selezionata la funzione di cambiamento del numero di lati per il disegno di poligoni. Tale funzione viene gestita con l'ausilio del dialog \textit{Modifica Attributi} posto in alto a destra e precisamente nella parte riguardante il numero di lati. Modificando il valore e confermando cliccando sul pulsante a destra viene modificato il numero di lati del poligono correntemente selezionato e del prossimo poligono che verr\`a disegnato.
+Qui \`e stata selezionata la funzione di cambiamento del numero di lati per il disegno di poligoni. Tale funzione viene gestita con l'ausilio del dialog \textit{Modifica Attributi} posto in alto a destra e precisamente nella parte riguardante il numero di lati. Modificando il valore e confermando cliccando sul pulsante a destra viene modificato il numero di lati del poligono correntemente selezionato e del prossimo poligono che verr\`a disegnato. \\
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.4]{images/clona.png}
+\caption{cambio colore del bordo  - PRIMA}
+\end{figure} 
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.4]{images/clona_dopo.png}
+\caption{cambio colore del bordo  - DOPO}
+\end{figure} 
+
+\vspace{100pt}
+Qui \`e stata selezionata la funzione di clonazione di un oggetto presente sul piano di disegno e precedentemente selezionato. Tale funzione permette di fare una copia di tutti gli oggetti disegnabili mediante un semplice click sul pulsante apposito \textit{Clona} posto in basso a sinistra. \\
+
 \sezione{Appendice}
 
 \subsezione{Messaggi di errore e loro significato}
